@@ -15,6 +15,7 @@ import org.jfree.chart.ChartPanel;
 import org.jfree.chart.JFreeChart;
 import org.jfree.chart.plot.PiePlot;
 import org.jfree.data.general.DefaultPieDataset;
+import java.sql.Date;
 
 /**
  *
@@ -34,48 +35,82 @@ public class HomePage extends javax.swing.JFrame {
         showPieChart();
         setStudentDetailsToTable();
         setBookDetailsToTable();
+        setDataToCards();
     }
-    
-        //to set the student details to the table
-    public void setStudentDetailsToTable(){
-        try{
+
+    //to set the student details to the table
+    public void setStudentDetailsToTable() {
+        try {
             Connection con = DBConnection.getConnection();
             Statement st = con.createStatement();
             ResultSet rs = st.executeQuery("select * from student_details");
-            
-            while(rs.next()){
+
+            while (rs.next()) {
                 String studentId = rs.getString("student_id");
                 String studentName = rs.getString("name");
                 String course = rs.getString("course");
                 String branch = rs.getString("branch");
-                
+
                 Object[] obj = {studentId, studentName, course, branch};
                 model = (DefaultTableModel) tbl_studentDetails.getModel();
                 model.addRow(obj);
-            }          
-        }catch(Exception e){
+            }
+        } catch (Exception e) {
             e.getMessage();
         }
     }
-    
-        //to set the book details to the table
-    public void setBookDetailsToTable(){
-        try{
+
+    //to set the book details to the table
+    public void setBookDetailsToTable() {
+        try {
             Connection con = DBConnection.getConnection();
             Statement st = con.createStatement();
             ResultSet rs = st.executeQuery("select * from book_details");
-            
-            while(rs.next()){
+
+            while (rs.next()) {
                 String bookId = rs.getString("book_id");
                 String bookName = rs.getString("book_name");
                 String author = rs.getString("author");
                 int quantity = rs.getInt("quantity");
-                
+
                 Object[] obj = {bookId, bookName, author, quantity};
                 model = (DefaultTableModel) tbl_bookDetails.getModel();
                 model.addRow(obj);
-            }          
-        }catch(Exception e){
+            }
+        } catch (Exception e) {
+            e.getMessage();
+        }
+    }
+
+    public void setDataToCards() {
+
+        Statement st;
+        ResultSet rs;
+        long l = System.currentTimeMillis();
+        Date todaysDate = new Date(l);
+
+        try {
+            Connection con = DBConnection.getConnection();
+            //some jbdc doesn't support getRow(), this is only available for scroll insensitive
+            //so we're making Statement as SCROLL INSENSITIVE
+            st = con.createStatement(ResultSet.TYPE_SCROLL_INSENSITIVE, ResultSet.CONCUR_READ_ONLY);
+            rs = st.executeQuery("select * from book_details");
+            rs.last();
+            lbl_noOfBooks.setText(Integer.toString(rs.getRow()));
+
+            rs = st.executeQuery("select * from student_details");
+            rs.last();
+            lbl_noOfStudents.setText(Integer.toString(rs.getRow()));
+
+            rs = st.executeQuery("select * from issue_book_details where status = '" + "Pending..." + "' ");
+            rs.last();
+            lbl_issueBooks.setText(Integer.toString(rs.getRow()));
+            
+            rs = st.executeQuery("select * from issue_book_details where due_date < '"+todaysDate+"' and status = '" + "Pending..." + "' ");
+            rs.last();
+            lbl_defaulterList.setText(Integer.toString(rs.getRow()));
+
+        } catch (Exception e) {
             e.getMessage();
         }
     }
@@ -85,13 +120,22 @@ public class HomePage extends javax.swing.JFrame {
 
         //create dataset
         DefaultPieDataset barDataset = new DefaultPieDataset();
-        barDataset.setValue("IPhone 5s", Double.valueOf(20));
-        barDataset.setValue("SamSung Grand", Double.valueOf(20));
-        barDataset.setValue("MotoG", Double.valueOf(40));
-        barDataset.setValue("Nokia Lumia", Double.valueOf(10));
+        
+        try{
+            Connection con = DBConnection.getConnection();
+            String sql = "select book_name, count(*) as issue_count from issue_book_details group by book_id";
+            Statement st = con.createStatement();
+            ResultSet rs = st.executeQuery(sql);
+            while(rs.next()){
+                barDataset.setValue(rs.getString("book_name"), new Double(rs.getDouble("issue_count")));
+            }
+            
+        }catch(Exception e){
+            
+        }
 
         //create chart
-        JFreeChart piechart = ChartFactory.createPieChart("mobile sales", barDataset, false, true, false);//explain
+        JFreeChart piechart = ChartFactory.createPieChart("Book Issuing Rate", barDataset, false, true, false);//explain
 
         PiePlot piePlot = (PiePlot) piechart.getPlot();
 
@@ -156,16 +200,16 @@ public class HomePage extends javax.swing.JFrame {
         jLabel18 = new javax.swing.JLabel();
         jPanel17 = new javax.swing.JPanel();
         jPanel18 = new javax.swing.JPanel();
-        jLabel20 = new javax.swing.JLabel();
+        lbl_noOfBooks = new javax.swing.JLabel();
         jLabel19 = new javax.swing.JLabel();
         jPanel19 = new javax.swing.JPanel();
-        jLabel21 = new javax.swing.JLabel();
+        lbl_noOfStudents = new javax.swing.JLabel();
         jLabel22 = new javax.swing.JLabel();
         jPanel20 = new javax.swing.JPanel();
-        jLabel23 = new javax.swing.JLabel();
+        lbl_issueBooks = new javax.swing.JLabel();
         jLabel24 = new javax.swing.JLabel();
         jPanel21 = new javax.swing.JPanel();
-        jLabel25 = new javax.swing.JLabel();
+        lbl_defaulterList = new javax.swing.JLabel();
         jLabel26 = new javax.swing.JLabel();
         jLabel27 = new javax.swing.JLabel();
         jLabel28 = new javax.swing.JLabel();
@@ -179,7 +223,7 @@ public class HomePage extends javax.swing.JFrame {
         setUndecorated(true);
         getContentPane().setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
-        jPanel1.setBackground(new java.awt.Color(102, 153, 0));
+        jPanel1.setBackground(new java.awt.Color(0, 102, 102));
         jPanel1.setForeground(new java.awt.Color(102, 102, 102));
         jPanel1.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
@@ -243,7 +287,7 @@ public class HomePage extends javax.swing.JFrame {
         jPanel3.setBackground(new java.awt.Color(51, 51, 51));
         jPanel3.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
-        jPanel4.setBackground(new java.awt.Color(102, 102, 0));
+        jPanel4.setBackground(new java.awt.Color(0, 102, 102));
         jPanel4.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
         jLabel6.setFont(new java.awt.Font("Segoe UI Semilight", 1, 18)); // NOI18N
@@ -458,6 +502,11 @@ public class HomePage extends javax.swing.JFrame {
         jLabel18.setForeground(new java.awt.Color(255, 255, 255));
         jLabel18.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_Exit_26px_2.png"))); // NOI18N
         jLabel18.setText("  Logout");
+        jLabel18.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mouseClicked(java.awt.event.MouseEvent evt) {
+                jLabel18MouseClicked(evt);
+            }
+        });
         jPanel16.add(jLabel18, new org.netbeans.lib.awtextra.AbsoluteConstraints(60, 10, 140, -1));
 
         jPanel3.add(jPanel16, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 540, 300, 50));
@@ -468,11 +517,11 @@ public class HomePage extends javax.swing.JFrame {
         jPanel17.setPreferredSize(new java.awt.Dimension(1200, 720));
         jPanel17.setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());
 
-        jPanel18.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(102, 102, 0)));
+        jPanel18.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(0, 102, 102)));
 
-        jLabel20.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
-        jLabel20.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_Book_Shelf_50px.png"))); // NOI18N
-        jLabel20.setText("10");
+        lbl_noOfBooks.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
+        lbl_noOfBooks.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_Book_Shelf_50px.png"))); // NOI18N
+        lbl_noOfBooks.setText(" 0");
 
         javax.swing.GroupLayout jPanel18Layout = new javax.swing.GroupLayout(jPanel18);
         jPanel18.setLayout(jPanel18Layout);
@@ -480,14 +529,14 @@ public class HomePage extends javax.swing.JFrame {
             jPanel18Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel18Layout.createSequentialGroup()
                 .addContainerGap(67, Short.MAX_VALUE)
-                .addComponent(jLabel20, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addComponent(lbl_noOfBooks, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(44, 44, 44))
         );
         jPanel18Layout.setVerticalGroup(
             jPanel18Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel18Layout.createSequentialGroup()
                 .addGap(28, 28, 28)
-                .addComponent(jLabel20)
+                .addComponent(lbl_noOfBooks)
                 .addContainerGap(37, Short.MAX_VALUE))
         );
 
@@ -499,24 +548,24 @@ public class HomePage extends javax.swing.JFrame {
 
         jPanel19.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(255, 51, 51)));
 
-        jLabel21.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
-        jLabel21.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_People_50px.png"))); // NOI18N
-        jLabel21.setText("10");
+        lbl_noOfStudents.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
+        lbl_noOfStudents.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_People_50px.png"))); // NOI18N
+        lbl_noOfStudents.setText(" 0");
 
         javax.swing.GroupLayout jPanel19Layout = new javax.swing.GroupLayout(jPanel19);
         jPanel19.setLayout(jPanel19Layout);
         jPanel19Layout.setHorizontalGroup(
             jPanel19Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel19Layout.createSequentialGroup()
-                .addContainerGap(67, Short.MAX_VALUE)
-                .addComponent(jLabel21, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addContainerGap(237, Short.MAX_VALUE)
+                .addComponent(lbl_noOfStudents, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(44, 44, 44))
         );
         jPanel19Layout.setVerticalGroup(
             jPanel19Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel19Layout.createSequentialGroup()
                 .addGap(28, 28, 28)
-                .addComponent(jLabel21)
+                .addComponent(lbl_noOfStudents)
                 .addContainerGap(37, Short.MAX_VALUE))
         );
 
@@ -526,11 +575,11 @@ public class HomePage extends javax.swing.JFrame {
         jLabel22.setText("No. Of Students");
         jPanel17.add(jLabel22, new org.netbeans.lib.awtextra.AbsoluteConstraints(340, 30, 230, 40));
 
-        jPanel20.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(102, 102, 0)));
+        jPanel20.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(0, 102, 102)));
 
-        jLabel23.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
-        jLabel23.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_Sell_50px.png"))); // NOI18N
-        jLabel23.setText("10");
+        lbl_issueBooks.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
+        lbl_issueBooks.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_Sell_50px.png"))); // NOI18N
+        lbl_issueBooks.setText(" 0");
 
         javax.swing.GroupLayout jPanel20Layout = new javax.swing.GroupLayout(jPanel20);
         jPanel20.setLayout(jPanel20Layout);
@@ -538,14 +587,14 @@ public class HomePage extends javax.swing.JFrame {
             jPanel20Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel20Layout.createSequentialGroup()
                 .addContainerGap(67, Short.MAX_VALUE)
-                .addComponent(jLabel23, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addComponent(lbl_issueBooks, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(44, 44, 44))
         );
         jPanel20Layout.setVerticalGroup(
             jPanel20Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel20Layout.createSequentialGroup()
                 .addGap(28, 28, 28)
-                .addComponent(jLabel23)
+                .addComponent(lbl_issueBooks)
                 .addContainerGap(37, Short.MAX_VALUE))
         );
 
@@ -557,9 +606,9 @@ public class HomePage extends javax.swing.JFrame {
 
         jPanel21.setBorder(javax.swing.BorderFactory.createMatteBorder(15, 0, 0, 0, new java.awt.Color(255, 51, 51)));
 
-        jLabel25.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
-        jLabel25.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_List_of_Thumbnails_50px.png"))); // NOI18N
-        jLabel25.setText("10");
+        lbl_defaulterList.setFont(new java.awt.Font("Segoe UI Black", 0, 36)); // NOI18N
+        lbl_defaulterList.setIcon(new javax.swing.ImageIcon(getClass().getResource("/adminIcons/icons8_List_of_Thumbnails_50px.png"))); // NOI18N
+        lbl_defaulterList.setText(" 0");
 
         javax.swing.GroupLayout jPanel21Layout = new javax.swing.GroupLayout(jPanel21);
         jPanel21.setLayout(jPanel21Layout);
@@ -567,14 +616,14 @@ public class HomePage extends javax.swing.JFrame {
             jPanel21Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel21Layout.createSequentialGroup()
                 .addContainerGap(67, Short.MAX_VALUE)
-                .addComponent(jLabel25, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addComponent(lbl_defaulterList, javax.swing.GroupLayout.PREFERRED_SIZE, 119, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addGap(44, 44, 44))
         );
         jPanel21Layout.setVerticalGroup(
             jPanel21Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
             .addGroup(jPanel21Layout.createSequentialGroup()
                 .addGap(28, 28, 28)
-                .addComponent(jLabel25)
+                .addComponent(lbl_defaulterList)
                 .addContainerGap(37, Short.MAX_VALUE))
         );
 
@@ -608,7 +657,7 @@ public class HomePage extends javax.swing.JFrame {
                 "Student Id", "Name", "Course", "Branch"
             }
         ));
-        tbl_studentDetails.setColorBackgoundHead(new java.awt.Color(102, 102, 0));
+        tbl_studentDetails.setColorBackgoundHead(new java.awt.Color(0, 102, 102));
         tbl_studentDetails.setColorSelBackgound(new java.awt.Color(255, 51, 51));
         tbl_studentDetails.setRowHeight(30);
         tbl_studentDetails.addMouseListener(new java.awt.event.MouseAdapter() {
@@ -628,7 +677,7 @@ public class HomePage extends javax.swing.JFrame {
                 "Book Id", "Name", "Author", "Quantity"
             }
         ));
-        tbl_bookDetails.setColorBackgoundHead(new java.awt.Color(102, 102, 0));
+        tbl_bookDetails.setColorBackgoundHead(new java.awt.Color(0, 102, 102));
         tbl_bookDetails.setColorSelBackgound(new java.awt.Color(255, 51, 51));
         tbl_bookDetails.setRowHeight(30);
         tbl_bookDetails.addMouseListener(new java.awt.event.MouseAdapter() {
@@ -749,7 +798,7 @@ public class HomePage extends javax.swing.JFrame {
 
     private void jLabel16MouseExited(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel16MouseExited
         // TODO add your handling code here:
-         jPanel14.setBackground(mouseExitColor);
+        jPanel14.setBackground(mouseExitColor);
     }//GEN-LAST:event_jLabel16MouseExited
 
     private void jLabel17MouseEntered(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel17MouseEntered
@@ -764,12 +813,12 @@ public class HomePage extends javax.swing.JFrame {
 
     private void tbl_studentDetailsMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_tbl_studentDetailsMouseClicked
         // TODO add your handling code here:
-     
+
     }//GEN-LAST:event_tbl_studentDetailsMouseClicked
 
     private void tbl_bookDetailsMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_tbl_bookDetailsMouseClicked
         // TODO add your handling code here:
-        
+
     }//GEN-LAST:event_tbl_bookDetailsMouseClicked
 
     private void jLabel29MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel29MouseClicked
@@ -788,6 +837,13 @@ public class HomePage extends javax.swing.JFrame {
         defaultlist.setVisible(true);
         dispose();
     }//GEN-LAST:event_jLabel17MouseClicked
+
+    private void jLabel18MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jLabel18MouseClicked
+        // TODO add your handling code here:
+        LoginPage login = new LoginPage();
+        login.setVisible(true);
+        dispose();
+    }//GEN-LAST:event_jLabel18MouseClicked
 
     /**
      * @param args the command line arguments
@@ -837,12 +893,8 @@ public class HomePage extends javax.swing.JFrame {
     private javax.swing.JLabel jLabel18;
     private javax.swing.JLabel jLabel19;
     private javax.swing.JLabel jLabel2;
-    private javax.swing.JLabel jLabel20;
-    private javax.swing.JLabel jLabel21;
     private javax.swing.JLabel jLabel22;
-    private javax.swing.JLabel jLabel23;
     private javax.swing.JLabel jLabel24;
-    private javax.swing.JLabel jLabel25;
     private javax.swing.JLabel jLabel26;
     private javax.swing.JLabel jLabel27;
     private javax.swing.JLabel jLabel28;
@@ -877,6 +929,10 @@ public class HomePage extends javax.swing.JFrame {
     private javax.swing.JPanel jPanel9;
     private javax.swing.JScrollPane jScrollPane2;
     private javax.swing.JScrollPane jScrollPane3;
+    private javax.swing.JLabel lbl_defaulterList;
+    private javax.swing.JLabel lbl_issueBooks;
+    private javax.swing.JLabel lbl_noOfBooks;
+    private javax.swing.JLabel lbl_noOfStudents;
     private javax.swing.JPanel panelPieChart;
     private rojeru_san.complementos.RSTableMetro tbl_bookDetails;
     private rojeru_san.complementos.RSTableMetro tbl_studentDetails;
